# google_photos_mobile_client

./: .gitignore  gphotos_mobile_client.py  pyproject.toml  readme.md  requirements.txt  seafile.md  setup.py
.github/workflows/: ci.yml
gphotos_mobile_client/: __init__.py  api_methods.py  cli.py  client.py  message_types.py  utils.py
gpmc/: __init__.py  api.py  api_methods.py  cli.py  client.py  db.py  db_state_updater.py  db_update_parser.py  exceptions.py  hash_handler.py  message_types.py  models.py  utils.py
helpers/: read_protobuf_from_hex.py
tests/: client_test.py  custom_progress_test.py  rich_conflict_test.py  upload_test.py
