[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gpmc"]

[project]
name = "gpmc"
version = "0.7.0"
description = "Google Photos client based on reverse engineered mobile API."
authors = [{ name = "xob0t" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = [
    "google photos",
    "uploader",
    "cli",
    "unlimited",
    "backup",
    "unofficial",
]
dependencies = ["bbpb>=1.4.2", "requests>=2.32", "rich>=13.9.0"]

[project.optional-dependencies]
dev = ["ruff>=0.9"]

[tool.ruff]
line-length = 200
extend-exclude = ["gpmc/message_types.py"]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "PERF",  # Perflint
    "FAST",  # FastAPI
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "PTH",   # flake8-use-pathlib
]

[project.urls]
Homepage = "https://github.com/xob0t/google_photos_mobile_client"

[project.scripts]
gpmc = "gpmc.cli:main"
